--- a/updated_style.css
+++ b/updated_style.css
@@ -13,7 +13,7 @@ body {
 header.header {
     min-height: 100vh;
     width: 100%;
-    background: url(images/backdrop.jpeg);
+    background: url(backdrop.jpeg);
     background-position: center;
     background-size: cover;
     
