--- a/updated_style.css
+++ b/updated_style.css
@@ -1,6 +1,7 @@
 *{
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 body {
     font-family: "EB Garamond", serif;
@@ -13,7 +14,7 @@ body {
 header.header {
     min-height: 100vh;
     width: 100%;
-    background: url(backdrop.jpeg);
+    background: url('images/backdrop.jpeg') center center no-repeat;
     background-position: center;
     background-size: cover;
     
